--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -222,8 +222,8 @@ body:not( .home-page ){
   padding-bottom: 2em;
   // overflow: auto;
   // overflow-x: hidden;
-  overflow-x: visible;
-  overflow-y: auto;
+  // overflow-y: auto;
+  overflow: visible;
   top: 0;
   left: 0;
   right: 0;
